WIP: remove search bar from header nav, rebalance tagline text -- mobile menu still has spacing issues

--- a/frontend/src/_config.scss
+++ b/frontend/src/_config.scss
@@ -53,7 +53,7 @@ $tile-height-2x: 288px;
 $uva-header-height: 40px;
 $site-header-height: 64px;
 $search-bar-height-sm: 64px;
-$search-bar-height-md: 128px;
+$search-bar-height-md: 64px;
 $search-bar-height-lg: 64px;
 $covid19-header-height: 40px;
 $header-height-sm: ($uva-header-height + $site-header-height + $search-bar-height-sm + $covid19-header-height);
